continue impl dark mode feature, fixing inputs colors

--- a/src/app/components/post-feed/post-feed.component.scss
+++ b/src/app/components/post-feed/post-feed.component.scss
@@ -4,7 +4,7 @@
 $post-size-max: 400px;
 
 .post-card {
-  background-color: var(--wma-card-color);
+  background-color: $post-card-bg;
   padding: 20px;
   margin: 10px;
   border-radius: 20px;
