--- a/src/app/components/user-menu/user-menu.component.scss
+++ b/src/app/components/user-menu/user-menu.component.scss
@@ -5,7 +5,7 @@
   margin-right: auto;
   margin-top: 10px;
   max-width: 85%;
-  background-color: $wma-card-color;
+  background-color: $post-card-bg;
   padding: 50px;
   border-radius: 2rem;
 }
