--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,34 +1,15 @@
-// THE ORDER MATTERS !!! <3
-
-// Override Bootstrap Global Variables
-
-
-
-.btn {
-  border-radius: 0 !important;
-}
-
-.btn-primary {
-  color: white !important;
-}
-
-//// Import Bootstrap Style Sheet
-//@import "bootstrap/scss/bootstrap";
 
 // Import Bootstrap Icons
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css");
 
+// Declare Globals
+$body-bg: var(--bs-body-bg);
+$body-color: var(--bs-body-color);
+$post-card-bg: var(--wma-card-color);
 
 // Declare Classes to be Imported through the app!
-
-
-$wma-background-color: var(--wma-background-color);
-$wma-card-color: var(--wma-card-color);
-$wma-main-text: var(--wma-main-text);
-
-html, body {
-  background-color: $wma-background-color;
-  color: $wma-main-text;
+.btn {
+  border-radius: 0 !important;
 }
 
 .main-layout {
